fixing resume link on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -136,6 +136,13 @@ a:visited {
   color: white;
 }
 
+.resume {
+  color: white;
+}
+.resume:visted {
+  color: white;
+}
+
 h1, h4, h5, p {
   color: midnightblue;
 }
